kubernetes/apps/media/booklore/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: booklore
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: booklore
      app.kubernetes.io/instance: booklore
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-brauni-dev-public
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: shelfmark
      toPorts:
        - ports:
            - port: "6060"
              protocol: TCP
